# ils-middleware

./: .gitignore  Dockerfile  README.md  alma.xml  alma_api_response.xml  conftest.py  docker-compose.yaml  pyproject.toml  setup.cfg
.circleci/: config.yml
charts/: values.yaml
dags/: aws_s3.py  aws_sns.py  aws_sqs.py  cornell.py  folio.py  folio_login.py  folio_request.py  sinopia.py  stanford.py  symphony.py  symphony_login.py
dags/tasks/amazon/: s3.py  sqs.py
dags/tasks/folio/: login.py  request.py
dags/tasks/sinopia/: rdf2marc.py  sinopia.py
dags/tasks/symphony/: login.py  mod_json.py  new.py  request.py
ils_middleware/: __init__.py
ils_middleware/dags/: alma.py  cornell.py  penn.py  queue_monitor.py  stanford.py
ils_middleware/tasks/alma/: mod_xml.py  new.py  post.py  post_bfinstance.py  post_bfwork.py
ils_middleware/tasks/amazon/: alma_instance_s3.py  alma_ns.py  alma_s3.py  alma_work_s3.py  s3.py  sqs.py
ils_middleware/tasks/amazon/xslt/: normalize-instance.xsl  normalize-work.xsl
ils_middleware/tasks/folio/: build.py  graph.py  login.py  map.py  new.py  request.py
ils_middleware/tasks/folio/mappings/: bf_instance.py  bf_work.py
ils_middleware/tasks/general/: init.py
ils_middleware/tasks/sinopia/: email.py  local_metadata.py  login.py  metadata_check.py  rdf2marc.py  sinopia.py  update_resource.py
ils_middleware/tasks/symphony/: login.py  mod_json.py  new.py  overlay.py  request.py
tests/: test_aws_sqs.py  test_dags.py  test_folio.py  test_folio_login.py  test_symphony.py  test_symphony_login.py
tests/dags/: test_dags.py  test_monitor_institutions_messages.py  test_stanford_dag.py
tests/dags/tasks/amazon/: test_sqs.py
tests/dags/tasks/sinopia/: test_rdf2marc.py
tests/fixtures/: 200_alma_api_response.xml  alma-record.xml  alma.xml  instance-rdf-9f03b3ad9874.xml  record.json  record.mar  record.xml  work-rdf-c22129c79459.xml
tests/fixtures/sqs/: test-message.json
tests/fixtures/xslt/: normalize-work.xsl
tests/helpers/: tasks.py
tests/tasks/alma/: mod_xml.py  new.py  post.py  test_post.py  test_post_bfinstance.py  test_post_bfwork.py
tests/tasks/amazon/: test_alma_instance_s3.py  test_alma_s3.py  test_alma_work_s3.py  test_s3.py  test_sqs.py
tests/tasks/folio/: test_build.py  test_graph.py  test_login.py  test_map.py  test_new_inventory.py
tests/tasks/general/: test_init.py
tests/tasks/sinopia/: test_email.py  test_local_metadata.py  test_metadata_check.py  test_rdf2marc.py  test_sinopia_login.py  test_update_resource.py
tests/tasks/symphony/: test_login.py  test_mod_json.py  test_new.py  test_overlay.py  test_symphony_login.py  test_symphony_request.py
(+5 files in other folders)
